2006-11-13  Daiki Ueno  <ueno@unixuser.org>

	* mml2015.el (mml2015-epg-encrypt): Removed backward compatibility for
	EasyPG (< 0.0.6).
	(mml2015-encrypt-to-self): Turn on by default.
	(mml2015-always-trust): New user option.

2006-11-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nntp.el (nntp-authinfo-force): New variable.
	(nntp-send-authinfo): Use it.

2006-11-09  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-strip-subject-encoded-words): Allow _not_ to
	decode encoded words.  Improve prompt.  Add comment about forwarding.
	(message-replacement-char): Move up.

2006-11-08  Wolfgang Jenkner  <wjenkner@inode.at>  (tiny change)

	* gnus-sum.el (gnus-summary-catchup): Use gnus-sorted-intersection
	instead of gnus-intersection because arguments of gnus-sorted-nunion
	must be sorted.  This avoids corruption of gnus-newsgroup-unreads.

2006-11-07  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-strip-subject-encoded-words): Reformat prompt.
	(message-simplify-subject-functions): Enable
	message-strip-subject-encoded-words by default.

2006-11-06  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-strip-subject-encoded-words): New function
	(message-simplify-subject-functions): New variable.
	(message-simplify-subject): Use it.  Fix typo in doc string.
	Support message-strip-subject-encoded-words.

2006-11-03  Juanma Barranquero  <lekktu@gmail.com>

	* gnus-diary.el (gnus-diary-delay-format-function):
	* nndiary.el (nndiary-reminders):
	* nnsoup.el (nnsoup-always-save): Use "non-nil" in docstrings.

2006-11-01  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-art.el (article-hide-boring-headers): Fetch date from
	gnus-original-article-buffer to avoid problems with localized date
	strings.

2006-10-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* html2text.el (html2text-format-tags): Avoid infloop on open tags.

2006-10-29  Reiner Steib  <Reiner.Steib@gmx.de>

	* mm-util.el (mm-codepage-iso-8859-list, mm-codepage-ibm-list):
	New variables.